<resources>
    <string name="app_name">Maratonei</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="news">News</string>
    <string name="genre">Genre</string>
    <string name="cast">Cast</string>
    <string name="releasedate">Release Date</string>
    <string name="wellcome">Wellcome to Maratonei</string>
    <string name="wellcomeintro">Stay on top of everything in theaters and on TV.</string>
    <string name="language">language=en-US</string>
    <string name="overview">Overview</string>
    <string name="serieName">Serie Name</string>
    <string name="seasons">Seasons</string>
    <string name="newTite">Title of Notice</string>
    <string name="dateNotice">Date of Notice</string>
    <string name="descriptionNotice">Description of Notice</string>
    <string name="moviename">Movie Name</string>
    <string name="moviedate">Movie Date</string>
    <string name="movieoverview">Overview</string>
    <string name="errorconnection">Connection Error.</string>
    <string name="messageerrorconnection">You device need internet access for continue application.\n" +
                    "Please, verify you connection.</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="exit">Exit</string>
    <string name="title_activity_home">Maratonei</string>
    <string name="cine">Cine</string>
    <string name="know">To Know</string>
    <string name="wellover">Get access to hundreds of movies and series information in one place. In addition to information about the movies in motion and location of cinemas near you.</string>
    <string name="episodename">Episode Name</string>
    <string name="overviewepisode">Episode Overview</string>
</resources>
