<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_play_circle_outline_gray_24dp"
        android:title="@string/movies"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_tv_gray_24dp"
        android:title="@string/series"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_forum_gray_24dp"
        android:title="@string/news"
        app:showAsAction="withText" />
    <item
        android:id="@+id/navigation_cinelocation"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/cine"
        app:showAsAction="withText" />

</menu>
